--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,4 +10,5 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <script src="https://cdn.tailwindcss.com"></script>
 </html>
